fdo#67547 fix access to methods (getScript) of MasterScriptProvider from VB

access to libreoffice objects ( and methods/properties of those objects )
from VB all goes through the ole automation bridge. There has been a long
standing issue where the bridge falls over trying to access methods of the
scripting framework MasterScriptProvider object.

Change-Id: I3b9391286e1030bef2a12d6e546a5c47a4f68edb
(cherry picked from commit 92500896a9d0ba873c06a4a2728eb5a1b9d8f68d)
Reviewed-on: https://gerrit.libreoffice.org/5206
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>